@@ -167,31 +167,36 @@ p#ngg-inlinebutton {
 /* SETTINGS FOR PROGRESS BAR */
 
 div .progressborder {
-	border: 1px inset ; 
+	border:1px solid #DDDDDD;
 	display: block; 
-	height: 20px; 
+	height: 30px; 
 	background-color: #464646; 
 	width: 100%;
 	margin-top: 15px;
 	margin-bottom: 15px;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px; 
+    border-radius: 5px;
 }
 
 div .progressbar {
 	border: medium none ; 
 	display: block; 
-	height: 20px; 
+	height: 30px; 
 	background-color: #D54E21; 
 	width: 0%;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px; 
+    border-radius: 5px;
 }
 
 div .progressbar span {
 	display: inline; 
-	position: relative; 
+	position: absolute; 
 	color: white; 
 	font-weight: bold; 
-	padding-left: 5px;
+	padding: 5px 0 0 5px;
 }
-
 
 .show_details
 {
